--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
                             <div class="card h-100 shadow-lg border-0 rounded-3">
                                 <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
-                                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                                    <h5 class="card-title">morsalin</h5>
+                                    <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi harum facilis fugiat excepturi tempore perspiciatis corrupti, nobis deserunt nemo deleniti veniam laborum ducimus, eveniet repudiandae, facere dolor culpa molestias delectus. Alias nisi vero iusto odio eos officiis voluptatum voluptatibus. Enim asperiores ut veritatis officiis ipsam ex vero maiores rerum quam dolorem officia facilis, cumque mollitia cupiditate eum blanditiis fugiat modi, incidunt beatae nemo ipsa minus voluptatum? Cumque odit laborum et ad fuga harum libero minima eos vitae eum nisi at nam fugiat iure impedit, sapiente consectetur, qui vero a illum, sequi mollitia voluptate sit neque. Sed exercitationem architecto vero unde.</p>
                                 </div>
                                 <div class="m-3">
                                     <button class="btn btn-danger">Bay Now</button>
